fix fonts on firefox

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,16 +2,19 @@
    font-family: 'montserrat';
    src: url('/fonts/Montserrat-Medium.woff2') format('woff2');
    font-weight: normal;
-   font-style: normal;
  }
 
  @font-face {
    font-family: 'montserrat';
    src: url('/fonts/Montserrat-Bold.woff2') format('woff2');
    font-weight: bold;
-   font-style: normal;
  }
  
+ html {
+  -webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
+  box-sizing: border-box;
+}
+
  /*css reset and font stuff*/
  body {
    margin: 0;
